--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "migration:run": "npm run typeorm migration:run",
     "migration:show": "npm run typeorm migration:show",
     "migration:revert": "npm run typeorm migration:revert",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "prepare": "husky install"
   },
   "author": "",
@@ -31,14 +31,17 @@
     "@types/connect-redis": "^0.0.17",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
+    "@types/jest": "^27.0.2",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.9.6",
     "@types/redis": "^2.8.32",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^7.0.2",
+    "jest": "^27.2.2",
     "mysql2": "^2.3.0",
     "rimraf": "^3.0.2",
+    "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "tslint": "^6.1.3",
     "typescript": "^4.4.3"
