--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
     ],
     "strict": true,
     "skipLibCheck": true,
+    "types": [
+      "@types/jest",
+    ]
   },
   "include": [
     "src/**/*"
